fdo#72221: Fixed for doughnut chart - RT is invalid

Doughnut chart is exported as pie chart.

Change-Id: I440fa86786be8c9bdd4663475faf8e2a5f5e8070